Added win32 build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,10 @@ include_directories(${CMAKE_SOURCE_DIR}/3rdParty/include)
 link_directories(${CMAKE_SOURCE_DIR}/3rdParty/lib)
 
 add_executable(OpenGLEngine src/main.cpp src/glad.c)
+if (LINUX)
 target_link_libraries(OpenGLEngine glfw3.a GLEW.a GL)
+endif ()
+if(WIN32)
+target_link_libraries(OpenGLEngine glfw3.lib glew32s.lib opengl32.lib)
+endif()
 
